[package]
name = "anicli"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }  # or the latest version
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
thiserror = "1.0"
dialoguer = "0.9"